# devmem-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: agent-workflow.md  api.md  configuration.md  development.md  install.md  mcp-clients.md  openai.md  postgres.md  privacy.md  release-contract.json  release-contract.md  ticket-evidence.md
examples/: claude-code-mcp.json  codex-config.toml
examples/session-hooks/: session_stop.sh
scripts/: audit_release.py
src/devmem/: __main__.py  api_server.py  mcp_server.py
src/devmem/app/: __init__.py  services.py
src/devmem/client/: __init__.py  python_client.py
src/devmem/domain/: __init__.py  config.py  errors.py  models.py  ports.py
src/devmem/hooks/templates/: session_start.sh
src/devmem/infra/: local_embedder.py  openai_embedder.py  runtime.py  sqlite_store.py
tests/: test_api_server.py  test_cli.py  test_config.py  test_hooks_and_audit.py  test_mcp_server.py  test_optional_isolation.py  test_runtime.py  test_sqlite_flow.py
