[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devmem-mcp"
version = "0.1.0"
description = "Local-first MCP developer memory for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "DevMem maintainers" }]
keywords = ["mcp", "memory", "agents", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "sqlite-vec>=0.1.9",
]

[project.urls]
Homepage = "https://github.com/leonstnyc/devmem-mcp"
Repository = "https://github.com/leonstnyc/devmem-mcp"
Issues = "https://github.com/leonstnyc/devmem-mcp/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
api = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]
dev = [
  "basedpyright>=1.1.0",
  "build>=1.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.8.0",
]

[project.scripts]
devmem = "devmem.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["devmem*"]

[tool.setuptools.package-data]
devmem = ["hooks/templates/*.sh"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
  "unit: fast unit tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF012"]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
include = ["src", "tests", "scripts"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
